# iirs

./: .gitignore  Cargo.toml  README.md  improved  input.fasta  justfile  test.py
.github/workflows/: release.yml
IUPACpal/: IUPACpal  IUPACpal.out  IUPACpalrs.out  main.cc  rand.fasta  test_results_2024-01-03.10:05:04.csv  timing_tests.cfg
IUPACpal/temp/: IUPACpal.out
IUPACpal/test_data/: 500N.fasta
bench/: Cargo.toml  IUPACpal  bench.rs  heatmaps.py  helper.rs  logs.rs  plot.py  requirements.txt  results.csv  test.py
etc/: test.py  test_equality.py
etc/litterature/: improved.cpp
iupacpal-rust/: Cargo.toml  IUPACpalrs.out  input.fasta  rand.fasta
iupacpal-rust/.github/workflows/: release.yml
iupacpal-rust/src/: algo.rs  config.rs  constants.rs  debug.rs  experiments.rs  format.rs  lib.rs  main.rs  matrix.rs  rmq.rs  utils.rs
iupacpal-rust/src/debug/: mod.rs
py-iirs/: .gitignore  Cargo.toml  pyproject.toml
py-iirs/iirs/: __init__.py  __init__.pyi
py-iirs/src/: lib.rs
src/: algo.rs  bench.rs  cli.rs  config.rs  constants.rs  format.rs  lib.rs  libtests.rs  main.rs  matrix.rs  rmq.rs  utils.rs
tests/: tests.rs
tests/test_data/: 1000000N.fasta  100000N.fasta  10000N.fasta  200000N.fasta  8100N.fasta  alys.fna  edge_gap.fasta  test1.fasta  test_multiple.fasta  truncation_edge_case.fasta
