[package]
name = "iirs"
default-run = "iirs"
version = "0.9.2"
edition = "2021"
license = "GPL-3.0"
readme = "README.md"
description = "Inverted repeats finder"
keywords = [
    "iupac",
    "inverted-repeats",
]

[lib]
name = "iirs"
path = "src/lib.rs"

[workspace]
members = [".", "bench"]

[dependencies]
anyhow = "1.0"
divsufsort = "2.0.0"
clap = { version = "4.4.12", features = ["derive"] }
elapsed-time = "0.1.1"
rmq-tabulation = { git = "https://github.com/daxida/rmq-tabulation", branch = "master" }
seq_io = "0.3.2"
rayon = { version = "1.8.1", optional = true }

[features]
default = []
parallel = ["rayon"]
tabulation = []

# [profile.dev]
# opt-level = 3

[profile.test]
opt-level = 3

[profile.release-with-debug]
inherits = "release"
debug = true
